--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,7 +35,8 @@
         android:background="@drawable/edittextbackground"
         android:layout_marginTop="20dp"
         android:padding="6dp"
-        android:textColorHint="@color/textHintColor"/>
+        android:textColorHint="@color/textHintColor"
+        android:textColor="@android:color/white"/>
 
     <EditText
         android:id="@+id/registerpasswordEditText"
@@ -48,7 +49,9 @@
         android:background="@drawable/edittextbackground"
         android:layout_marginTop="10dp"
         android:padding="6dp"
-        android:textColorHint="@color/textHintColor"/>
+        android:textColorHint="@color/textHintColor"
+        android:textColor="@android:color/white"
+        android:password="true"/>
 
     <Button
         android:id="@+id/createAccountButton"
