--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:layout_centerHorizontal="true"
-        android:textSize="40dp"
+        android:textSize="50dp"
         android:layout_marginTop="60dp"
         android:textColor="#FFFFFF"/>
 
@@ -60,7 +60,8 @@
         android:layout_marginTop="10dp"
         android:padding="6dp"
         android:textColorHint="@color/textHintColor"
-        android:textColor="#FFFFFF"/>
+        android:textColor="#FFFFFF"
+        android:password="true"/>
 
     <EditText
         android:id="@+id/registerpasswordConfirmEditText"
@@ -74,7 +75,8 @@
         android:layout_marginTop="10dp"
         android:padding="6dp"
         android:textColorHint="@color/textHintColor"
-        android:textColor="#FFFFFF"/>
+        android:textColor="#FFFFFF"
+        android:password="true"/>
 
     <Button
         android:id="@+id/createAccountButton"
@@ -99,7 +101,9 @@
         android:layout_centerHorizontal="true"
         android:text="@string/toLoginPageText"
         android:background="?android:selectableItemBackground"
-        android:textSize="12dp"/>
+        android:textSize="12dp"
+        android:textAllCaps="false"
+        android:textColor="@color/textHintColor"        />
 
     <ProgressBar
         android:id="@+id/registerProgessBar"
